# dotenv

./: .gitignore  CMakeLists.txt  README.md  TEST_README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
include/: dotenv.h
tests/: .env.example  CMakeLists.txt  aa_dotenv.cpp  test_dotenv.cpp
